--- a/cocktail_search_engine.ipynb
+++ b/cocktail_search_engine.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPhP9mL6qUR9oiQdgXz1+NY",
+      "authorship_tag": "ABX9TyNVpEmCA9m4RmG2p+qbv9Te",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5296,7 +5296,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 305,
+          "height": 249,
           "referenced_widgets": [
             "1145f5efc3a54a73970e2fd046359454",
             "6113d7af418345e5854d5d1f002173c7",
@@ -5578,7 +5578,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 954
+          "height": 424
         },
         "id": "NXJZNxZcbaX3",
         "outputId": "d0b9e240-9b79-4cf3-8fc0-beb11f5cef56"
@@ -5914,7 +5914,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 192
+          "height": 88
         },
         "id": "mJqaPlS-9wqD",
         "outputId": "12144b6a-a09b-4e73-f79e-81517f22aec2"
@@ -6297,7 +6297,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 136,
+          "height": 118,
           "referenced_widgets": [
             "8306650901834b26a26c0b5c3de43396",
             "3a20bcdf88c741a98f02f28c7e870eda",
@@ -6473,6 +6473,249 @@
             "[['6 cl', 'Ketel One Vodka'], ['3 cl', 'Pineapple juice (fresh pressed)'], ['1.5 cl', 'Lime juice (freshly squeezed)'], ['1 cl', 'De Kuyper Pineapple liqueur'], ['1 cl', 'Sugar syrup (65.0°brix, 2 sugar to 1 water rich syrup)'], ['3 drop', 'Tiki bitters']]\n",
             "SCORE: 18.23297691345215\n",
             "TITLE: Pineapple Martini (Difford's recipe)\n",
+            "URL: SHAKE all ingredients with ice and fine strain into chilled glass.\n",
+            "==================================================\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_results(question):\n",
+        "  question_embedding = get_embeddings([question]).numpy()\n",
+        "  question_embedding.shape\n",
+        "  scores, samples = embeddings_dataset.get_nearest_examples(\n",
+        "      \"embeddings\", question_embedding, k = 5\n",
+        "  )\n",
+        "  samples_df = pd.DataFrame.from_dict(samples)\n",
+        "  samples_df[\"scores\"] = scores\n",
+        "  samples_df.sort_values(\"scores\",ascending=False,inplace=True)\n",
+        "  \n",
+        "  for _, row in samples_df.iterrows():\n",
+        "    print(f\"COMMENT: {row.text}\")\n",
+        "    print(f\"SCORE: {row.scores}\")\n",
+        "    print(f\"TITLE: {row.title}\")\n",
+        "    print(f\"URL: {row.recipe}\")\n",
+        "    print(\"=\" * 50)\n",
+        "    print()"
+      ],
+      "metadata": {
+        "id": "et5xAcwYIWJr"
+      },
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "get_results(\"what is a cocktail for a fun night out?\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zHh2dBopI9Rs",
+        "outputId": "4d53b433-6a4d-4be3-e709-fd91888e7c91"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "COMMENT: Raspberry 'Martini' (by Dick Bradsell)\n",
+            "Martini glass\n",
+            "Raspberries\n",
+            "MUDDLE raspberries in base of shaker. Add other ingredients, SHAKE with ice and fine strain into chilled glass.\n",
+            "[['7 fresh', 'Raspberries (fresh)'], ['6 cl', 'Rutte Dry Gin'], ['3 cl', 'Giffard Creme de Framboise'], ['2 dash', 'Orange Bitters by Angostura (optional)']]\n",
+            "SCORE: 22.603178024291992\n",
+            "TITLE: Raspberry 'Martini' (by Dick Bradsell)\n",
+            "URL: MUDDLE raspberries in base of shaker. Add other ingredients, SHAKE with ice and fine strain into chilled glass.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Moonlight Cocktail (Gaz Regan's)\n",
+            "Flute glass\n",
+            "Orange zest twist\n",
+            "SHAKE all ingredients with ice and fine strain into chilled glass.\n",
+            "[['4.5 cl', 'Rutte Dry Gin'], ['2.25 cl', 'De Kuyper Triple Sec (40%)'], ['1.5 cl', 'Crème de violette liqueur'], ['0.75 cl', 'Lime juice (freshly squeezed)'], ['0.75 cl', 'Lemon juice (freshly squeezed)']]\n",
+            "SCORE: 22.48417854309082\n",
+            "TITLE: Moonlight Cocktail (Gaz Regan's)\n",
+            "URL: SHAKE all ingredients with ice and fine strain into chilled glass.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Hummingbird\n",
+            "Double old-fashioned\n",
+            "Garnish with an edible / drink-safe flower; I like using a Marigold\n",
+            "Shake all ingredients with ice. Strain over a large clear rock or some smaller clear cubes of ice (if you shake with some big chunks of clear ice, you can use your ice tongs to fish these out of your shaker after you strain the cocktail, and use these in your glass; adds a nice touch).\n",
+            "[['3 cl', 'Bacardi Spiced'], ['3 cl', 'Coconut rum liqueur (35-40% alc./vol.)'], ['6 cl', 'Pineapple juice (fresh pressed)'], ['1.5 cl', 'Lemon juice (freshly squeezed)'], ['1.5 cl', 'Vanilla sugar syrup']]\n",
+            "SCORE: 22.048507690429688\n",
+            "TITLE: Hummingbird\n",
+            "URL: Shake all ingredients with ice. Strain over a large clear rock or some smaller clear cubes of ice (if you shake with some big chunks of clear ice, you can use your ice tongs to fish these out of your shaker after you strain the cocktail, and use these in your glass; adds a nice touch).\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Improved Whiskey Cocktail\n",
+            "Old-fashioned glass\n",
+            "Lemon zest twist\n",
+            "STIR all ingredients with ice and strain into ice-filled glass (preferably over a chunk of block ice).\n",
+            "[['3 cl', 'Straight rye whiskey (100 proof / 50% alc./vol.)'], ['3 cl', 'Bourbon whiskey'], ['0.5 cl', 'Sugar syrup (65.0°brix, 2 sugar to 1 water rich syrup)'], ['0.25 cl', 'Luxardo Maraschino liqueur'], ['1 dash', \"Boker's bitters\"]]\n",
+            "SCORE: 21.78658103942871\n",
+            "TITLE: Improved Whiskey Cocktail\n",
+            "URL: STIR all ingredients with ice and strain into ice-filled glass (preferably over a chunk of block ice).\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Cosmopolitan (no added sugar* & low-calorie)\n",
+            "Martini glass\n",
+            "Orange zest twist (flamed)\n",
+            "SHAKE all ingredients with ice and fine strain into chilled glass. (Be sure to use naturally sweetened cranberry drink rather than \"juice\" sweetened with sugar.)\n",
+            "[['4.5 cl', 'Ketel One Citroen Vodka'], ['1.5 cl', 'Agave Sec liqueur'], ['3 cl', 'Cranberry juice (sweetened)'], ['0.75 cl', 'Lime juice (freshly squeezed)'], ['0.5 cl', 'Sugar-free sweetener']]\n",
+            "SCORE: 21.60835075378418\n",
+            "TITLE: Cosmopolitan (no added sugar* & low-calorie)\n",
+            "URL: SHAKE all ingredients with ice and fine strain into chilled glass. (Be sure to use naturally sweetened cranberry drink rather than \"juice\" sweetened with sugar.)\n",
+            "==================================================\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "get_results(\"what's a cocktail for a gloomy night in the winter?\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aN-kX1PZJZ5c",
+        "outputId": "c2bccfb0-6df0-4527-9fd2-8816101cb24d"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "COMMENT: Moonlight Cocktail (Gaz Regan's)\n",
+            "Flute glass\n",
+            "Orange zest twist\n",
+            "SHAKE all ingredients with ice and fine strain into chilled glass.\n",
+            "[['4.5 cl', 'Rutte Dry Gin'], ['2.25 cl', 'De Kuyper Triple Sec (40%)'], ['1.5 cl', 'Crème de violette liqueur'], ['0.75 cl', 'Lime juice (freshly squeezed)'], ['0.75 cl', 'Lemon juice (freshly squeezed)']]\n",
+            "SCORE: 27.41656494140625\n",
+            "TITLE: Moonlight Cocktail (Gaz Regan's)\n",
+            "URL: SHAKE all ingredients with ice and fine strain into chilled glass.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Raspberry 'Martini' (by Dick Bradsell)\n",
+            "Martini glass\n",
+            "Raspberries\n",
+            "MUDDLE raspberries in base of shaker. Add other ingredients, SHAKE with ice and fine strain into chilled glass.\n",
+            "[['7 fresh', 'Raspberries (fresh)'], ['6 cl', 'Rutte Dry Gin'], ['3 cl', 'Giffard Creme de Framboise'], ['2 dash', 'Orange Bitters by Angostura (optional)']]\n",
+            "SCORE: 27.36587905883789\n",
+            "TITLE: Raspberry 'Martini' (by Dick Bradsell)\n",
+            "URL: MUDDLE raspberries in base of shaker. Add other ingredients, SHAKE with ice and fine strain into chilled glass.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Cold Winter Warmer Sour\n",
+            "Old-fashioned glass\n",
+            "Lemon zest twist (discarded), orange slice & Luxardo Maraschino cherry on stick (sail)\n",
+            "STIR honey with vodka in base of shaker until honey dissolves. Add other ingredients, SHAKE with ice and strain back into shaker. DRY SHAKE (without ice) and strain into ice-filled glass.\n",
+            "[['1 spoon', 'Honey'], ['3 cl', 'Ketel One Citroen Vodka'], ['1.5 cl', 'Bénédictine D.O.M.'], ['3 cl', 'Lemon juice (freshly squeezed)'], ['1.5 cl', 'Pasteurised egg white']]\n",
+            "SCORE: 26.90196418762207\n",
+            "TITLE: Cold Winter Warmer Sour\n",
+            "URL: STIR honey with vodka in base of shaker until honey dissolves. Add other ingredients, SHAKE with ice and strain back into shaker. DRY SHAKE (without ice) and strain into ice-filled glass.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Winter Cocktail\n",
+            "Martini glass\n",
+            "Lemon zest twist\n",
+            "STIR all ingredients with ice and strain into chilled glass.\n",
+            "[['6 cl', 'Rémy Martin 1738 Cognac'], ['1.5 cl', 'Sour apple liqueur'], ['1.5 cl', 'Martini Extra Dry vermouth'], ['0.75 cl', 'Sugar syrup (65.0°brix, 2 sugar to 1 water rich syrup)']]\n",
+            "SCORE: 26.737045288085938\n",
+            "TITLE: Winter Cocktail\n",
+            "URL: STIR all ingredients with ice and strain into chilled glass.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Improved Whiskey Cocktail\n",
+            "Old-fashioned glass\n",
+            "Lemon zest twist\n",
+            "STIR all ingredients with ice and strain into ice-filled glass (preferably over a chunk of block ice).\n",
+            "[['3 cl', 'Straight rye whiskey (100 proof / 50% alc./vol.)'], ['3 cl', 'Bourbon whiskey'], ['0.5 cl', 'Sugar syrup (65.0°brix, 2 sugar to 1 water rich syrup)'], ['0.25 cl', 'Luxardo Maraschino liqueur'], ['1 dash', \"Boker's bitters\"]]\n",
+            "SCORE: 26.216659545898438\n",
+            "TITLE: Improved Whiskey Cocktail\n",
+            "URL: STIR all ingredients with ice and strain into ice-filled glass (preferably over a chunk of block ice).\n",
+            "==================================================\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "get_results(\"what's a cocktail for a date night before sex?\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j6U6P25XJqgR",
+        "outputId": "45a58dcd-0a49-40fe-8b75-8593f2def4a5"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "COMMENT: Flip Cocktail (generic recipe)\n",
+            "Sour or Martini/Coupette glass\n",
+            "Dust with grated nutmeg\n",
+            "SHAKE all ingredients with the ice and strain back into shaker. DRY SHAKE (without ice) and pour into chilled glass.\n",
+            "[['6 cl', 'Brandy, whisk(e)y, gin, rum etc.'], ['1.5 cl', 'Sugar syrup (65.0°brix, 2 sugar to 1 water rich syrup)'], ['1 fresh', 'Egg (white & yolk)']]\n",
+            "SCORE: 25.754634857177734\n",
+            "TITLE: Flip Cocktail (generic recipe)\n",
+            "URL: SHAKE all ingredients with the ice and strain back into shaker. DRY SHAKE (without ice) and pour into chilled glass.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Cosmopolitan (no added sugar* & low-calorie)\n",
+            "Martini glass\n",
+            "Orange zest twist (flamed)\n",
+            "SHAKE all ingredients with ice and fine strain into chilled glass. (Be sure to use naturally sweetened cranberry drink rather than \"juice\" sweetened with sugar.)\n",
+            "[['4.5 cl', 'Ketel One Citroen Vodka'], ['1.5 cl', 'Agave Sec liqueur'], ['3 cl', 'Cranberry juice (sweetened)'], ['0.75 cl', 'Lime juice (freshly squeezed)'], ['0.5 cl', 'Sugar-free sweetener']]\n",
+            "SCORE: 25.736751556396484\n",
+            "TITLE: Cosmopolitan (no added sugar* & low-calorie)\n",
+            "URL: SHAKE all ingredients with ice and fine strain into chilled glass. (Be sure to use naturally sweetened cranberry drink rather than \"juice\" sweetened with sugar.)\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Improved Whiskey Cocktail\n",
+            "Old-fashioned glass\n",
+            "Lemon zest twist\n",
+            "STIR all ingredients with ice and strain into ice-filled glass (preferably over a chunk of block ice).\n",
+            "[['3 cl', 'Straight rye whiskey (100 proof / 50% alc./vol.)'], ['3 cl', 'Bourbon whiskey'], ['0.5 cl', 'Sugar syrup (65.0°brix, 2 sugar to 1 water rich syrup)'], ['0.25 cl', 'Luxardo Maraschino liqueur'], ['1 dash', \"Boker's bitters\"]]\n",
+            "SCORE: 25.100862503051758\n",
+            "TITLE: Improved Whiskey Cocktail\n",
+            "URL: STIR all ingredients with ice and strain into ice-filled glass (preferably over a chunk of block ice).\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Moonlight Cocktail (Harry Craddock's recipe)\n",
+            "Coupe glass\n",
+            "Lemon zest twist\n",
+            "SHAKE all ingredients with ice and fine strain into chilled glass.\n",
+            "[['4.5 cl', 'Rutte Dry Gin'], ['0.75 cl', 'Kirschwasser (cherry) eau-de-vie'], ['3 cl', 'Sauvignon blanc wine'], ['3.75 cl', 'Grapefruit juice (pink)']]\n",
+            "SCORE: 24.98855972290039\n",
+            "TITLE: Moonlight Cocktail (Harry Craddock's recipe)\n",
+            "URL: SHAKE all ingredients with ice and fine strain into chilled glass.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Moonlight Cocktail (Gaz Regan's)\n",
+            "Flute glass\n",
+            "Orange zest twist\n",
+            "SHAKE all ingredients with ice and fine strain into chilled glass.\n",
+            "[['4.5 cl', 'Rutte Dry Gin'], ['2.25 cl', 'De Kuyper Triple Sec (40%)'], ['1.5 cl', 'Crème de violette liqueur'], ['0.75 cl', 'Lime juice (freshly squeezed)'], ['0.75 cl', 'Lemon juice (freshly squeezed)']]\n",
+            "SCORE: 24.563695907592773\n",
+            "TITLE: Moonlight Cocktail (Gaz Regan's)\n",
             "URL: SHAKE all ingredients with ice and fine strain into chilled glass.\n",
             "==================================================\n",
             "\n"
