--- a/cocktail_search_engine.ipynb
+++ b/cocktail_search_engine.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNVpEmCA9m4RmG2p+qbv9Te",
+      "authorship_tag": "ABX9TyMXu7HszKFqrWlQ4ahJ8R7Y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6717,6 +6717,226 @@
             "SCORE: 24.563695907592773\n",
             "TITLE: Moonlight Cocktail (Gaz Regan's)\n",
             "URL: SHAKE all ingredients with ice and fine strain into chilled glass.\n",
+            "==================================================\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "get_results(\"what's a cocktail for a Sunday night in coding?\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iXKCYvK6KWyY",
+        "outputId": "3f06485d-ea00-4eb0-b8d9-74d75cb8f9f5"
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "COMMENT: Blue Moon Cocktail (Dale DeGroff's recipe)\n",
+            "Coupe glass\n",
+            "Sage leaf & blueberry\n",
+            "Lightly MUDDLE blueberry in base of shaker (just to break skin). ADD vodka and one heaped spoon of oolong tea and stir in base of shaker for 60 seconds (or better still, leave to steep for ten minutes). Add other ingredients, SHAKE with ice and fine strain into chilled glass.\n",
+            "[['1 fresh', 'Blueberries (fresh)'], ['6 cl', 'Ketel One Vodka'], ['1 spoon', 'Oolong tea'], ['1.5 cl', 'St-Germain elderflower liqueur'], ['2.25 cl', 'Lemon juice (freshly squeezed)'], ['1.5 cl', 'Agave syrup'], ['1 fresh', 'Sage leaves']]\n",
+            "SCORE: 30.309803009033203\n",
+            "TITLE: Blue Moon Cocktail (Dale DeGroff's recipe)\n",
+            "URL: Lightly MUDDLE blueberry in base of shaker (just to break skin). ADD vodka and one heaped spoon of oolong tea and stir in base of shaker for 60 seconds (or better still, leave to steep for ten minutes). Add other ingredients, SHAKE with ice and fine strain into chilled glass.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Moonlight Cocktail (Gaz Regan's)\n",
+            "Flute glass\n",
+            "Orange zest twist\n",
+            "SHAKE all ingredients with ice and fine strain into chilled glass.\n",
+            "[['4.5 cl', 'Rutte Dry Gin'], ['2.25 cl', 'De Kuyper Triple Sec (40%)'], ['1.5 cl', 'Crème de violette liqueur'], ['0.75 cl', 'Lime juice (freshly squeezed)'], ['0.75 cl', 'Lemon juice (freshly squeezed)']]\n",
+            "SCORE: 29.873153686523438\n",
+            "TITLE: Moonlight Cocktail (Gaz Regan's)\n",
+            "URL: SHAKE all ingredients with ice and fine strain into chilled glass.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Flip Cocktail (generic recipe)\n",
+            "Sour or Martini/Coupette glass\n",
+            "Dust with grated nutmeg\n",
+            "SHAKE all ingredients with the ice and strain back into shaker. DRY SHAKE (without ice) and pour into chilled glass.\n",
+            "[['6 cl', 'Brandy, whisk(e)y, gin, rum etc.'], ['1.5 cl', 'Sugar syrup (65.0°brix, 2 sugar to 1 water rich syrup)'], ['1 fresh', 'Egg (white & yolk)']]\n",
+            "SCORE: 29.790334701538086\n",
+            "TITLE: Flip Cocktail (generic recipe)\n",
+            "URL: SHAKE all ingredients with the ice and strain back into shaker. DRY SHAKE (without ice) and pour into chilled glass.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: The Last Time (AKA Stop Fiddling With My Drink)\n",
+            "Nick & Nora glass\n",
+            "Square of white chocolate balanced on rim\n",
+            "STIR all ingredients with ice and fine strain into chilled glass.\n",
+            "[['4.5 cl', 'Havana Club 3 Year Old rum'], ['1.5 cl', 'Coconut rum liqueur (35-40% alc./vol.)'], ['1.5 cl', 'Bénédictine D.O.M.'], ['1.5 cl', 'Fino sherry'], ['4 drop', \"Bob's Vanilla bitters\"]]\n",
+            "SCORE: 29.653202056884766\n",
+            "TITLE: The Last Time (AKA Stop Fiddling With My Drink)\n",
+            "URL: STIR all ingredients with ice and fine strain into chilled glass.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Moonlight Cocktail (Harry Craddock's recipe)\n",
+            "Coupe glass\n",
+            "Lemon zest twist\n",
+            "SHAKE all ingredients with ice and fine strain into chilled glass.\n",
+            "[['4.5 cl', 'Rutte Dry Gin'], ['0.75 cl', 'Kirschwasser (cherry) eau-de-vie'], ['3 cl', 'Sauvignon blanc wine'], ['3.75 cl', 'Grapefruit juice (pink)']]\n",
+            "SCORE: 28.82834815979004\n",
+            "TITLE: Moonlight Cocktail (Harry Craddock's recipe)\n",
+            "URL: SHAKE all ingredients with ice and fine strain into chilled glass.\n",
+            "==================================================\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "get_results(\"what's a cocktail with dry gin?\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mTpzm_z3LaUp",
+        "outputId": "b0cce076-0c09-47a3-ce9d-3a63827a9575"
+      },
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "COMMENT: Gin Fixed\n",
+            "Martini glass\n",
+            "Lemon slice\n",
+            "SHAKE all ingredients with ice and strain into glass with crushed ice. CHURN (stir) drink with ice and serve with straws.\n",
+            "[['6 cl', 'Rutte Dry Gin'], ['0.75 cl', 'De Kuyper Triple Sec (40%)'], ['3 cl', 'Pineapple juice (fresh pressed)'], ['1.5 cl', 'Lemon juice (freshly squeezed)'], ['0.75 cl', 'Sugar syrup (65.0°brix, 2 sugar to 1 water rich syrup)']]\n",
+            "SCORE: 22.144840240478516\n",
+            "TITLE: Gin Fixed\n",
+            "URL: SHAKE all ingredients with ice and strain into glass with crushed ice. CHURN (stir) drink with ice and serve with straws.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Gin Salad Dry Martini\n",
+            "Martini glass\n",
+            "3 chilled olives and 2 cocktail onions\n",
+            "STIR all ingredients with ice and strain into chilled glass.\n",
+            "[['7.5 cl', 'Rutte Dry Gin'], ['1.5 cl', 'Martini Extra Dry vermouth'], ['1 dash', 'Orange Bitters by Angostura (optional)']]\n",
+            "SCORE: 21.99472999572754\n",
+            "TITLE: Gin Salad Dry Martini\n",
+            "URL: STIR all ingredients with ice and strain into chilled glass.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Raspberry 'Martini' (by Dick Bradsell)\n",
+            "Martini glass\n",
+            "Raspberries\n",
+            "MUDDLE raspberries in base of shaker. Add other ingredients, SHAKE with ice and fine strain into chilled glass.\n",
+            "[['7 fresh', 'Raspberries (fresh)'], ['6 cl', 'Rutte Dry Gin'], ['3 cl', 'Giffard Creme de Framboise'], ['2 dash', 'Orange Bitters by Angostura (optional)']]\n",
+            "SCORE: 21.1087589263916\n",
+            "TITLE: Raspberry 'Martini' (by Dick Bradsell)\n",
+            "URL: MUDDLE raspberries in base of shaker. Add other ingredients, SHAKE with ice and fine strain into chilled glass.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Dry Martini (15:5 dumped) Franklin\n",
+            "Martini glass\n",
+            "Two olives on stick\n",
+            "STIR vermouth with ice and strain to DISCARD excess, leaving the glass and ice-coated with vermouth. POUR gin over vermouth coated ice, STIR and strain into chilled glass.\n",
+            "[['7.5 cl', 'Rutte Dry Gin'], ['1.5 cl', 'Martini Extra Dry vermouth'], ['1 dash', 'Orange Bitters by Angostura']]\n",
+            "SCORE: 20.052223205566406\n",
+            "TITLE: Dry Martini (15:5 dumped) Franklin\n",
+            "URL: STIR vermouth with ice and strain to DISCARD excess, leaving the glass and ice-coated with vermouth. POUR gin over vermouth coated ice, STIR and strain into chilled glass.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Gin Cocktail\n",
+            "Coupe glass\n",
+            "Lemon zest twist\n",
+            "STIR all ingredients with ice and fine strain into chilled glass.\n",
+            "[['6 cl', 'Rutte Old Simon Genever'], ['1 cl', 'Orange Curaçao liqueur'], ['0.5 cl', 'Sugar syrup (65.0°brix, 2 sugar to 1 water rich syrup)'], ['2 dash', \"Boker's bitters\"]]\n",
+            "SCORE: 19.080305099487305\n",
+            "TITLE: Gin Cocktail\n",
+            "URL: STIR all ingredients with ice and fine strain into chilled glass.\n",
+            "==================================================\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "get_results(\"what has strawberry?\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wap5u5fILoo6",
+        "outputId": "57dbf2c8-7bbb-4d8a-c981-07c6d03d1695"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "COMMENT: Strawberry Martini\n",
+            "Coupe glass\n",
+            "Strawberry on rim\n",
+            "MUDDLE strawberries in base of shaker. Add other ingredients, SHAKE with ice and fine strain into chilled glass.\n",
+            "[['5 fresh', 'Small ripe strawberries (hulled)'], ['6 cl', 'Ketel One Vodka'], ['1.5 cl', 'Sugar syrup (65.0°brix, 2 sugar to 1 water rich syrup)'], ['2 grind', 'Black pepper']]\n",
+            "SCORE: 30.183862686157227\n",
+            "TITLE: Strawberry Martini\n",
+            "URL: MUDDLE strawberries in base of shaker. Add other ingredients, SHAKE with ice and fine strain into chilled glass.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Strawberry Margarita (frozen)\n",
+            "Coupe glass\n",
+            "Half strawberry (or lime wedge) on rim\n",
+            "BLEND all ingredients with 6oz scoop crushed ice.\n",
+            "\n",
+            "Seasonal variation: 30 ml strawberry puree as substitute for fresh strawberries.\n",
+            "[['4 cl', 'Patrón Reposado tequila'], ['1.5 cl', 'De Kuyper Triple Sec (40%)'], ['2 cl', 'Lime juice (freshly squeezed)'], ['1.5 cl', 'Sugar syrup (65.0°brix, 2 sugar to 1 water rich syrup)'], ['4 fresh', 'Small ripe strawberries (hulled)']]\n",
+            "SCORE: 29.81363868713379\n",
+            "TITLE: Strawberry Margarita (frozen)\n",
+            "URL: BLEND all ingredients with 6oz scoop crushed ice.\n",
+            "\n",
+            "Seasonal variation: 30 ml strawberry puree as substitute for fresh strawberries.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Strawberry Blonde\n",
+            "Collins glass\n",
+            "Strawberry\n",
+            "MUDDLE strawberries in base of shaker. Add next three ingredients, SHAKE with ice and fine strain into ice-filled glass. TOP with soda and serve with straws.\n",
+            "[['2 fresh', 'Small ripe strawberries (hulled)'], ['6 cl', 'Ketel One Vodka'], ['4.5 cl', 'Lemon juice (freshly squeezed)'], ['2.25 cl', 'Sugar syrup (65.0°brix, 2 sugar to 1 water rich syrup)'], ['Top up with', 'Thomas Henry Soda Water']]\n",
+            "SCORE: 29.238035202026367\n",
+            "TITLE: Strawberry Blonde\n",
+            "URL: MUDDLE strawberries in base of shaker. Add next three ingredients, SHAKE with ice and fine strain into ice-filled glass. TOP with soda and serve with straws.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Strawberry Fields\n",
+            "Coupe glass\n",
+            "Five drops of balsamic vinegar and a dusting of freshly ground black pepper\n",
+            "MUDDLE strawberry in base of shaker. Add vodka, honey syrup, lemon juice and egg white and SHAKE with ice. Strain back into shaker, DRY SHAKE (without ice) and strain into chilled glass.\n",
+            "[['2 fresh', 'Small ripe strawberries (hulled)'], ['4.5 cl', 'Ketel One Vodka'], ['1.5 cl', 'Lemon juice (freshly squeezed)'], ['1.5 cl', 'Honey syrup (3 honey to 1 water)'], ['1.5 cl', 'Pasteurised egg white']]\n",
+            "SCORE: 28.46017074584961\n",
+            "TITLE: Strawberry Fields\n",
+            "URL: MUDDLE strawberry in base of shaker. Add vodka, honey syrup, lemon juice and egg white and SHAKE with ice. Strain back into shaker, DRY SHAKE (without ice) and strain into chilled glass.\n",
+            "==================================================\n",
+            "\n",
+            "COMMENT: Inga from Sweden\n",
+            "Collins glass\n",
+            "Strawberry\n",
+            "MUDDLE strawberries in base of shaker. Add other ingredients, SHAKE with ice and fine strain into ice-filled glass.\n",
+            "[['4.5 cl', 'Pear & cognac liqueur'], ['1.5 cl', 'Italian red bitter liqueur'], ['6 cl', 'Cranberry juice (sweetened)'], ['0.75 cl', 'Sugar syrup (65.0°brix, 2 sugar to 1 water rich syrup)'], ['0.75 cl', 'Lime juice (freshly squeezed)'], ['2 fresh', 'Small ripe strawberries (hulled)']]\n",
+            "SCORE: 26.350732803344727\n",
+            "TITLE: Inga from Sweden\n",
+            "URL: MUDDLE strawberries in base of shaker. Add other ingredients, SHAKE with ice and fine strain into ice-filled glass.\n",
             "==================================================\n",
             "\n"
           ]
